corrected alignment and updated colors scss

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -59,3 +59,15 @@
   text-decoration: none;
   flex-direction: row;
 }
+
+.button-info {
+  background-color: white;
+  color: white;
+  border: 3px;
+  border-style: solid;
+  border-radius: 10px;
+  padding: 2px 2px 2px 2px;
+  text-decoration: none;
+
+
+}
