--- a/app/assets/stylesheets/components/_upcoming-events.scss
+++ b/app/assets/stylesheets/components/_upcoming-events.scss
@@ -21,7 +21,7 @@ body {
 .wrapper {
   height: 360px;
   width: 654px;
-  margin: 50px auto;
+  margin: 20px auto;
   border-radius: 7px 7px 7px 7px;
   -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
@@ -53,6 +53,7 @@ body {
 }
 
 .date p {
+  margin-top: 40px;
   font-family: 'Quicksand', sans-serif;
   font-weight: bold;
   font-size: 20px;
