--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,3 +11,4 @@ $light-gray: #F4F4F4;
 $white: white;
 $pink-annega: #FDD9E0;
 $black:black;
+$violet:#A31ACB;
